# WeAreTogether

./: .gitignore  LICENSE  README.md
localchat/: .env.example  custom_models.example.json  custom_models.json  pyproject.toml
localchat/datasets/hf_ads/PeterBrendan__AdImageNet/: ACCESS_REQUIRED.txt  README.md
localchat/datasets/hf_ads/superfine__advertising-banner-generation/: README.md
localchat/datasets/hf_ads/superfine__advertising-banner-generation/data/: test-00000-of-00001.parquet  train-00000-of-00001.parquet
localchat/downloads/vintage_ads/: manifest.json
localchat/localchat/: __init__.py  config.py  llm_responses.jsonl  main.py  providers.py  schemas.py  setup_models.py
localchat/localchat/static/: app.js  drafter.html  drafter.js  index.html  room.html  room.js  styles.css
localchat/localchat/static/room_uploads/lobby/: 1774035692042-181f7e633e-jeff-Pictochat.pictochat.html  1774036200006-4100bc763c-jeff-Pictochat.pictochat.html
localchat/scripts/: download_hf_ad_datasets.py  fetch_vintage_ads.py
